@@ -1,3 +1,10 @@
+2005-03-06  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/ui/main_app.rb,
+	  lib/alexandria/ui/book_properties_dialog_base.rb:
+
+	Fixed wording.
+
 2005-03-05  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/ui/main_app.rb:
